# app/controllers/authController.go
@@ -9,7 +9,6 @@ import (
 	"gorm.io/gorm"
 )
 
-
 // UserSignUp method to create a new user.
 // @Description Create a new user.
 // @Summary create a new user
@@ -20,7 +19,7 @@ import (
 // @Param password body string true "Password"
 // @Param user_role body string true "UserRole"
 // @Success 200 {object} models.User
-// @Router /v1/user/sign/up [post]
+// @Router /v1/auth/sign/up [post]
 func UserSignUp(c *fiber.Ctx) error {
 	//解析请求体
 	signUp := &models.SignUp{}
@@ -68,7 +67,7 @@ func UserSignUp(c *fiber.Ctx) error {
 // @Param user_account body string true "UserAccount"
 // @Param password body string true "UserPassword"
 // @Success 200 {string} status "ok"
-// @Router /v1/user/sign/in [post]
+// @Router /v1/auth/sign/in [post]
 func UserSignIn(c *fiber.Ctx) error {
 	//解析请求体
 	signIn := &models.SignIn{}
@@ -87,7 +86,7 @@ func UserSignIn(c *fiber.Ctx) error {
 	}
 	// 查找用户是否存在
 	var foundedUser models.User // 定义一个变量用来存储查询到的用户
-	if err := global.Db.Where("useraccount=?", signIn.UserAccount).First(&foundedUser).Error; err != nil {
+	if err := global.Db.Where("user_account=?", signIn.UserAccount).First(&foundedUser).Error; err != nil {
 		if err == gorm.ErrRecordNotFound {
 			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 				"error": "用户名不存在",
