# docs/swagger.yaml
@@ -39,7 +39,7 @@ info:
   title: API
   version: "1.0"
 paths:
-  /v1/user/sign/in:
+  /v1/auth/sign/in:
     post:
       consumes:
       - application/json
@@ -67,7 +67,7 @@ paths:
       summary: auth user and return access and refresh token
       tags:
       - User
-  /v1/user/sign/up:
+  /v1/auth/sign/up:
     post:
       consumes:
       - application/json
@@ -101,6 +101,44 @@ paths:
       summary: create a new user
       tags:
       - User
+  /v1/users:
+    get:
+      consumes:
+      - application/json
+      description: Get all exists users.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+      summary: get all exists users
+      tags:
+      - users
+  /v1/users/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get user by given ID.
+      parameters:
+      - description: user ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+      summary: get user by given ID
+      tags:
+      - users
 securityDefinitions:
   ApiKeyAuth:
     in: header
