# pkg/routes/public_routes.go
@@ -10,7 +10,9 @@ func PublicRoutes(a *fiber.App) {
 
 	route := a.Group("/api/v1")
 
-	route.Post("/auth/sign/up",controllers.UserSignUp)
-	route.Post("/auth/sign/in",controllers.UserSignIn)
+	route.Post("/auth/sign/up", controllers.UserSignUp)
+	route.Post("/auth/sign/in", controllers.UserSignIn)
 
+	route.Get("/users", controllers.GetUsers)
+	route.Get("/users/:id", controllers.GetUserById)
 }
